Fixed SCSS bug...
For some reason prime icons were not showing... it is because i change css to scss for the stylesheet

--- a/involveU-frontend/src/styles.scss
+++ b/involveU-frontend/src/styles.scss
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/primeng/resources/primeng.min.scss';
+@import '../node_modules/primeng/resources/primeng.scss';
 @import '../node_modules/primeicons/primeicons.scss';
 @import "~primeng/resources/themes/nova/theme.scss";
 @import "~primeng/resources/primeng.min.scss";
-@import "~primeicons/primeicons.scss";
+@import '~primeicons/primeicons.scss';
 
 $InkBlue: #00244E;
 $GoldenYellow: #FDB913;
@@ -117,4 +118,9 @@ em {
 .dialogLines {
   border-top: 2px solid black;
   margin: 2% 8%;
+}
+
+.blueTitleBar {
+  background-color: $HeritageBlue;
+  height: 200px;
 }
